tests/baselines/reference/enumAssignmentCompat6.errors.txt
f.ts(33,5): error TS2322: Type 'DiagnosticCategory' is not assignable to type 'DiagnosticCategory2'.
f.ts(34,5): error TS2322: Type 'DiagnosticCategory2' is not assignable to type 'DiagnosticCategory'.
f.ts(54,14): error TS1252: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'. Modules are automatically in strict mode.


==== f.ts (3 errors) ====
    // @filename a.ts
    namespace a {
        export enum DiagnosticCategory {
            Warning,
            Error,
            Suggestion,
            Message,
        }
    
        export enum DiagnosticCategory2 {
            Warning,
            Error,
            Suggestion,
            Message,
        }
    }
    
    namespace b {
        export enum DiagnosticCategory {
            Warning = "Warning",
            Error = "Error",
            Suggestion = "Suggestion",
            Message = "Message",
        }
    }
    
    function f(x: a.DiagnosticCategory, y: b.DiagnosticCategory) {
        x = y;
        y = x;
    }
    
    function g(x: a.DiagnosticCategory2, y: b.DiagnosticCategory) {
        x = y;
        ~
!!! error TS2322: Type 'DiagnosticCategory' is not assignable to type 'DiagnosticCategory2'.
        y = x;
        ~
!!! error TS2322: Type 'DiagnosticCategory2' is not assignable to type 'DiagnosticCategory'.
    }
    
    
    export enum DiagnosticCategory {
        Warning,
        Error,
        Suggestion,
        Message,
    }
    
    export let x: DiagnosticCategory;
    
    {
        enum DiagnosticCategory {
            Warning = "Warning",
            Error = "Error",
            Suggestion = "Suggestion",
            Message = "Message",
        }
        function f(y: DiagnosticCategory) {
                 ~
!!! error TS1252: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'. Modules are automatically in strict mode.
            x = y;
            y = x;
        }
    }